deploy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password-generator-ingress
spec:
  rules:

  - host: api.nated.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 8081
        
  - host: pw.nated.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-svc
            port:
              number: 5000
      
  tls:
  - hosts:
    - pw.nated.ca
    - api.nated.ca
    secretName: natedca-origin
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      imagePullSecrets:
      - name: natedio-registry
      containers:
      - name: ui
        imagePullPolicy: Always
        image: registry.nated.io/phosphorusmyesophagus/password-generator-ui:latest
        ports:
          - containerPort: 5000
            hostPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
      - name: natedio-registry
      containers:
      - name: api
        imagePullPolicy: Always
        image: registry.nated.io/phosphorusmyesophagus/password-generator:latest
        ports:
          - containerPort: 8081
            hostPort: 8081
